tests/lexer/valid/test_comments.src
// это комментарий
int x = 42; // комментарий в конце строки
/* многострочный
   комментарий */
int/*внутри*/y = 10;