tests/lexer/invalid/test_invalid_char.src
int x = 42;
@invalid
int y = 10;